--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@tailwindcss/forms": "^0.5.7",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "cookies": "^0.9.1",
+    "dotenv": "^16.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
