--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "cookies": "^0.9.1",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
