--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookies": "^0.9.1",
     "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
